src/style.css
:root {
  --primary-color-gold: #9e7ff6;
  --primary-color-gray: #111111;
  --secondary-color-black: #17192b;
  --secondary-color-dark-gray: #242b37;
  --secondary-color-light-gray: #5c6779;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "League Spartan", sans-serif;
  overflow-x: hidden;
}

/* Hero section */

.header {
  min-height: 100vh;
  width: 100%;
  padding-bottom: 6rem;
  background: linear-gradient(
      to right,
      var(--primary-color-gray) 0 40%,
      rgba(92, 103, 121, 0.1) 40%
    ),
    no-repeat url("/images/hero-bg-desktop.jpg");
  background-size: cover;
  background-position: 50%;
}

.hero-section {
  color: #fff;
  max-width: 40%;
  margin-left: 10.3rem;
  padding-top: 4rem;
}

/* .logo:link,
.logo:visited {
  color: #fff;
  text-decoration: none;
} */

.logo {
  display: inline-block;
  margin-bottom: 9.5rem;
}

.hero-text {
}

.hero-header {
  font-size: 5rem;
  font-weight: 300;
  letter-spacing: -1px;
  line-height: 80px;
  margin-bottom: 1rem;
}

.hero-textbody {
  max-width: 27.8125rem;
  font-size: 1.25rem;
  font-weight: 300;
  line-height: 30px;
  margin-bottom: 2rem;
  padding-right: 2rem;
  font-size: 1.25rem;
}

.hero-cta:link,
.hero-cta:visited {
  display: inline-block;
  color: #fff;
  text-decoration: none;
  border: 1px solid #fff;
  font-size: 1.0625rem;
  font-weight: 500;
  padding: 1.5rem 3rem;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  cursor: pointer;
  transition: all 0.3s;
}

.hero-cta:hover,
.hero-cta:active {
  background-color: #fff;
  color: var(--primary-color-gray);
}

/* Features section */

.features {
}

.features-section {
  /* switch to -4rem when media queries are fixed */
  margin: -4rem 10.3rem;
  display: flex;
  flex-direction: column;
  gap: 5rem;
}

.feature-item {
  display: flex;
  align-items: center;
  gap: 7.81rem;
  position: relative;
  z-index: 999;
}

#feature-background--first {
  width: 100%;
  height: 20rem;
  position: absolute;
  top: 45%;
  left: -10.3rem;
  z-index: -999;
}

#feature-background--first img {
  width: 100%;
  height: 100%;
}

#feature--first .feature-image {
  box-shadow: 0 10px 70px rgba(0, 0, 0, 0.5);
}

#feature--second::before {
  content: url(/pattern-lines.svg);
  position: absolute;
  top: 45%;
  right: 0;
  transform: translate(50%, -50%);
  z-index: 1000;
}

/* #feature--second::after {
  content: url(/pattern-curve-top-left.svg);
  display: block;
  width: 75%;
  height: 20rem;
  position: absolute;
  background-size: 100% 100%;
  top: 47.5%;
  right: -10.3rem;
  z-index: 999;
} */

#feature-background--second {
  width: 100%;
  height: 20rem;
  position: absolute;
  top: 47.5%;
  right: -10.3rem;
  z-index: 999;
}

#feature-background--second img {
  width: 100%;
  height: 100%;
}

.feature-image {
  /* height: 45rem;
  width: 33.75rem; */
  flex: 1 0 33.75rem;
  overflow: hidden;
}

.image--decorated {
  position: relative;
}

.image--zoomedIn {
  transform: scale(2);
  object-position: 0% -3.5rem;
}

.feature-textbody {
  height: 17.2rem;
  margin-bottom: 2rem;
  flex-shrink: 2;
  color: var(--secondary-color-dark-gray);
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.875rem;
}

.feature-textbody::before {
  content: url(/public/pattern-divide.svg);
  display: inline-block;
  margin-bottom: 3rem;
}

.feature-textbody h2 {
  width: 80%;
  font-size: 3rem;
  font-weight: 700;
  letter-spacing: -0.25px;
  line-height: 3rem;
  text-align: left;
  margin-bottom: 2rem;
}

/* Menu Highlights section */

.menuHighlights-section {
  background-color: var(--primary-color-gray);
  color: #fff;
}
.menuHighlights {
  position: relative;
  padding: 8rem 10.3rem 4rem 10.3rem;
  display: flex;
  gap: 5rem;
  flex: 1 1 auto;
}

.menuHighlights::before {
  content: url(/public/pattern-divide.svg);
  position: absolute;
}

.menuHighlights-textbody {
  /* max-width: 27.8125rem; */
  padding: 4rem 0;
  font-size: 1.25rem;
  font-weight: 300;
  line-height: 1.875rem;
  flex: 2 2 auto;
}

.menuHighlights-textbody h2 {
  margin-bottom: 1.5rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 3rem;
  letter-spacing: -0.5px;
}
.menuHighlights-items {
  padding: 4rem 0;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.menuHighlights-item {
  padding-bottom: 1.5rem;
  display: flex;
  gap: 4rem;
  border-bottom: 2px solid rgba(92, 103, 121, 0.3);
}

.menuHighlights-items .menuHighlights-item:last-child {
  border-bottom: none;
}

.item-image {
  width: 8rem;
  height: 6rem;
  display: flex;
}

.item-image::after {
  content: url(/pattern-divide.svg);
  margin: 1rem 0 0 -2.5rem;
}

.item-image img {
  position: relative;
  z-index: 999;
}

.item-textbody {
  max-width: 21.875rem;
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.625rem;
}

.item-textbody h3 {
  padding-bottom: 0.5rem;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.5rem;
  letter-spacing: -0.25px;
}

/* Events section */

.events-section {
}

.events {
  position: relative;
  margin: 4rem 10.3rem;
  display: flex;
  gap: 2rem;
}

.events::before {
  content: url(/pattern-lines.svg);
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-25%, -50%);
  z-index: 1000;
}

.events-background {
  width: 100%;
  height: 20rem;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-50%, -20%);
}

.events-background img {
  width: 100%;
  height: 100%;
}

.events-image {
  display: none;
  height: 45rem;
  flex: 1 0 33.75rem;
}

.events-image.events-image--active {
  display: block;
}

.events-image img {
  position: relative;
  height: 100%;
  width: 100%;
  z-index: 999;
  object-fit: cover;
  box-shadow: 0 10px 70px rgba(0, 0, 0, 0.5);
}

.events-textbody {
  padding: 2.5rem 5rem;
  font-size: 1.25rem;
  font-weight: 300;
  line-height: 1.875rem;
}

.events-textbody .event-description h2 {
  margin-bottom: 1.5rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 3rem;
  letter-spacing: -0.5px;
}

.events-textbody .event-description p {
  margin-bottom: 3rem;
}

.events-textbody .event-description {
  display: none;
}

.event-description.event-description--active {
  display: inline-block;
}

.events-cta:link,
.events-cta:visited {
  font-size: 1.0625rem;
  font-weight: 500;
  line-height: 1.75rem;
  letter-spacing: 2.5px;
  margin-bottom: 3rem;
  text-transform: uppercase;
  display: inline-block;
  padding: 1rem 3rem;
  color: #fff;
  background-color: #111;
  text-decoration: none;
  border: solid 1px #111;
  cursor: pointer;
  transition: all 0.3s;
}

.events-cta:hover,
.events-cta:active {
  color: #111;
  background-color: #fff;
}

.events-selections input {
  display: none;
}

.events-selections {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.events-selections label {
  position: relative;
  font-size: 1.0625rem;
  font-weight: 500;
  line-height: 1.75rem;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  opacity: 50%;
  cursor: pointer;
  transition: all 0.3s;
}

.events-selections label:hover {
  opacity: 100%;
}

.events-selections label::before {
  /* TODO get rid of mouse events */
  content: url(/public/pattern-divide.svg);
  position: absolute;
  opacity: 0;
  transform: scaleX(1.5) translateX(-110%);
  z-index: -999;
}

.events-selections .events-selection--active label,
.events-selections .events-selection--active label::before {
  opacity: 100%;
}

/* Call to action section */

.callToAction-section {
  height: 15rem;
  background: url(/images/ready-bg-desktop.jpg);
  display: flex;
  align-items: center;
}

.callToAction {
  width: 100%;
  padding: 4rem 10.3rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #fff;
}

.callToAction h2 {
  font-size: 3rem;
  line-height: 3rem;
  letter-spacing: -0.5px;
}

.callToAction a:link,
.callToAction a:visited {
  color: inherit;
  text-decoration: none;
  padding: 1rem 3rem;
  flex-shrink: 0;
  font-size: 1.0625rem;
  font-weight: 500;
  line-height: 1.75rem;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  border: solid 1px #fff;
  transition: all 0.3s;
}

.callToAction a:hover,
.callToAction a:active {
  color: #111;
  background-color: #fff;
}

/* Footer */

footer {
  padding: 4rem 10.3rem;
  color: #fff;
  background-color: #111;
}

.footer-container {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.footer-container p {
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.75rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

@media (max-width: 1295px) {
  .events-cta:link,
  .events-cta:visited {
    padding: 1rem 2rem;
  }
}

@media (max-width: 1228px) {
  #feature--second .feature-textbody {
    align-self: start;
  }
}

@media (max-width: 1178px) {
  .callToAction a:link,
  .callToAction a:visited {
    padding: 1rem 3rem;
  }
}

@media (max-width: 1115px) {
  .hero-section {
    margin-left: 5.15rem;
  }

  .features-section {
    margin: -4rem 5.15rem;
  }
  .feature-image {
    flex: 1 0 27rem;
  }

  #feature--first::after {
    left: -5.15rem;
  }

  #feature-background--second {
    right: -5.15rem;
  }

  .menuHighlights {
    padding: 8rem 5.15rem 4rem 5.15rem;
  }

  .events {
    margin: 4rem 5.15rem;
  }

  .events-image {
    flex: 1 0 27rem;
  }

  .callToAction {
    padding: 4rem 5.15rem;
  }

  footer {
    padding: 4rem 5.15rem;
  }
}

@media (max-width: 1107px) {
  .events-textbody {
    padding-right: 1rem;
  }
}

@media (max-width: 854px) {
  .feature-item {
    gap: 2.81rem;
  }

  .events-textbody {
    padding: 2.5rem 0;
  }
}

@media (max-width: 768px) {
  .header {
    height: 62rem;
    background: linear-gradient(
        to top,
        var(--primary-color-gray) 0 62.5%,
        rgba(92, 103, 121, 0.1) 62.5%
      ),
      no-repeat url("/images/hero-bg-tablet.jpg");
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: end;
  }

  .logo {
    display: inline-block;
    margin-bottom: 1.5rem;
  }

  .hero-section {
    color: #fff;
    max-width: 43.0625rem;
    margin-bottom: 3rem;
    margin-left: 0;
    padding-top: 0;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .hero-header {
    width: 50%;
    font-size: 3rem;
    font-weight: 300;
    letter-spacing: -0.6px;
    line-height: 64px;
    margin-bottom: 1rem;
  }

  .hero-text {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

/* TODO: adjust background shape sizes to be smaller on smaller screens */
/* @media (max-width: 975px) {
  #feature--first::after,
  #feature--second::after {
    width: 44.75rem;
    background-repeat: no-repeat;
    background-size: contain;
  }

  #feature--second::after {
    right: 0;
  }
} */

